__unused/ubiquiti/unifi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: default
  labels:
    app.kubernetes.io/component: unifi
    app.kubernetes.io/part-of: ubiquiti
    app.kubernetes.io/name: ubiquiti
  annotations:
    #cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    #traefik.ingress.kubernetes.io/router.middlewares: redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: uni.$DOMAIN_NAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 8443
  tls:
    - secretName: tls-certificate
      hosts:
        - uni.$DOMAIN_NAME
